--- a/demo_html.html
+++ b/demo_html.html
@@ -11,7 +11,6 @@
       padding: 0;
       margin: 0;
     }
-
     img {
       width: 100%;
     }
@@ -20,7 +19,14 @@
 
 <body>
   <img id="test" />
-  <script src="./demo.js"></script>
+  <div id="test-dom">
+    <span>test</span>
+    test2
+    <div>
+      <span>xxx</span>
+    </div>
+  </div>
+  <script src="./demo_html.js"></script>
 </body>
 
 </html>
