--- a/demo_html.html
+++ b/demo_html.html
@@ -59,7 +59,7 @@
   <div id="test-dom">
     <div class="absolute"></div>
     <img src="./test/test.jpg">
-    <span class="font">test</span>
+    <span class="font">test😍👪test😍👪😍👪test😍👪</span>
     <div class="border">
       <span>xxx</span>
     </div>
